# ice-cream-dataops2

./: pyproject.toml
ice-cream-dataops/: config.test.yaml
