[tool.poetry]
name = "ice-cream-dataops2"
version = "0.1.0"
description = ""
authors = ["sofiehaug-cognite <sofie.haug@cognite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "0.3.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
